--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "chromatic --exit-zero-on-changes",
+    "deploy:chromatic": "npm run build-storybook && chromatic --exit-zero-on-changes",
+    "deploy:vercel": "npm run build-storybook && vercel --prod storybook-static",
+    "deploy:preview": "npm run build-storybook && vercel storybook-static",
+    "screenshots": "storycap --serverCmd \"npm run storybook\" http://localhost:6006 --outDir screenshots",
+    "screenshots:build": "npm run build-storybook && storycap storybook-static --outDir screenshots"
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
@@ -37,6 +43,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "chromatic": "^13.1.3",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -44,6 +51,7 @@
     "globals": "^16.3.0",
     "playwright": "^1.54.2",
     "storybook": "^9.1.2",
+    "storycap": "^5.0.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
